--- a/ProjAssignment/ProjAssignment/MainWindow.xaml
+++ b/ProjAssignment/ProjAssignment/MainWindow.xaml
@@ -7,6 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="317,0,0,0" VerticalAlignment="Center" Click="Button_Click"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="1257,516,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="348,131,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
