--- a/ProjAssignment/ProjAssignment/Caretaker.xaml
+++ b/ProjAssignment/ProjAssignment/Caretaker.xaml
@@ -10,10 +10,10 @@
 
     <Grid>
         <Canvas Background="White">
-            <DataGrid x:Name="caretakerTable" Height="169" Width="185" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="80" CellEditEnding="OnCellUpdated" RowEditEnding="OnRowEditEnd" CanUserReorderColumns="False" >
+            <DataGrid x:Name="caretakerTable" Height="169" Width="185" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="80" CellEditEnding="OnCellUpdated" RowEditEnding="OnRowEditEnd" CanUserReorderColumns="True" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Caretaker Name" Binding="{Binding Name}"/>
-                    <DataGridTextColumn Header="Phonenumber" Binding="{Binding PhoneNumber}"/>
+                    <DataGridTextColumn Header="Caretaker Name" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Phonenumber" Binding="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
                 </DataGrid.Columns>
 
             </DataGrid>
