--- a/ProjAssignment/ProjAssignment/Homepage.xaml
+++ b/ProjAssignment/ProjAssignment/Homepage.xaml
@@ -8,16 +8,24 @@
         Title="Homepage" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="57*"/>
-            <ColumnDefinition Width="743*"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Menu Margin="0,10,0,10" HorizontalAlignment="Left" Width="74" Grid.ColumnSpan="2">
+        <Menu Margin="0,5,0,5" HorizontalAlignment="Center" Width="104" RenderTransformOrigin="0.453,0.495">
+            <Menu.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="-0.672"/>
+                    <RotateTransform Angle="0.294"/>
+                    <TranslateTransform Y="-0.663"/>
+                </TransformGroup>
+            </Menu.RenderTransform>
             <MenuItem Header="Caretakers"/>
             <MenuItem Header="Animals" />
             <MenuItem Header="Enclosure"/>
         </Menu>
-        <Frame Source="../Caretaker.xaml" />
-        
+        <Frame x:Name="contentFrame" Source="../Caretaker.xaml" Margin="20,10,10,10" Grid.Column="1" />
+
 
 
     </Grid>
