--- a/ProjAssignment/ProjAssignment/Caretaker.xaml
+++ b/ProjAssignment/ProjAssignment/Caretaker.xaml
@@ -12,7 +12,7 @@
         <Canvas Background="White">
             <DataGrid x:Name="caretakerTable" Height="169" Width="185" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="80" CellEditEnding="OnCellUpdated" RowEditEnding="OnRowEditEnd" CanUserReorderColumns="True" >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Caretaker Name" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="Caretaker" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                     <DataGridTextColumn Header="Phonenumber" Binding="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
                 </DataGrid.Columns>
 
