--- a/ProjAssignment/ProjAssignment/Animal.xaml
+++ b/ProjAssignment/ProjAssignment/Animal.xaml
@@ -1,5 +1,6 @@
 ﻿<Page x:Class="ProjAssignment.Animal"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -9,7 +10,38 @@
       Title="Animal">
 
     <Grid>
-        <Canvas Background="#FFFBFBFB"/>
+        <Canvas IsEnabled="True">
+            <Canvas.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF629887" Offset="0"/>
+                    <GradientStop Color="#FF10DEA0" Offset="0.743"/>
+                    <GradientStop Color="#FF8BB5A8" Offset="0.067"/>
+                </LinearGradientBrush>
+            </Canvas.Background>
+            <DataGrid x:Name="animalTable" Height="182" Width="333" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="70" Canvas.Left="46" RenderTransformOrigin="0.5,0.5" IsEnabled="True" SelectionChanged="animalTable_SelectionChanged">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Name" Binding="{Binding animalName, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Enclosure" Binding="{Binding enclosureName, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Type" Binding="{Binding animalType, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Food" Binding="{Binding foodType, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Food Amount" Binding="{Binding FoodAmount, UpdateSourceTrigger=PropertyChanged}" />
+
+
+                </DataGrid.Columns>
+            </DataGrid>
+            <ComboBox x:Name="enclosureComboBox" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="497" Canvas.Top="159" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" RenderTransformOrigin="0.106,0.606" />
+            <ComboBox x:Name="foodComboBox" DisplayMemberPath="Type" SelectedValuePath="Id" Canvas.Left="497" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" />
+            <xctk:IntegerUpDown x:Name="foodIntegerUpDown" Increment="100" Value="100" DefaultValue="100" Canvas.Left="507" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center" Width="81"/>
+            <Label x:Name="Name" Content="Name&#xD;&#xA;&#xA;" Canvas.Left="490" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26"/>
+            <Label Content="Food&#xD;&#xA;" Canvas.Left="490" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top" IsEnabled="True" RenderTransformOrigin="0.081,-0.363"/>
+            <Label Content="Enclosure&#xD;&#xA;" Canvas.Left="490" Canvas.Top="134" />
+            <Label Content="Type&#xD;&#xA;" Canvas.Left="490" Canvas.Top="181" />
+            <TextBox x:Name="animalNameTextBox" Canvas.Left="497" TextWrapping="Wrap" Canvas.Top="72" Width="120" TextChanged="TextBox_TextChanged_1" />
+            <TextBox x:Name="animalTypeTextBox" Canvas.Left="497" TextWrapping="Wrap" Canvas.Top="202" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Label Content="Amount of food (g)&#xA;" Canvas.Left="497" Canvas.Top="228" HorizontalAlignment="Center" VerticalAlignment="Top" Height="33"/>
+            <Button x:Name="addButton" Content="Add" Canvas.Left="507" Canvas.Top="310" Click="OnAddButtonClick"/>
+        </Canvas>
+
 
     </Grid>
 </Page>
