--- a/ProjAssignment/ProjAssignment/Animal.xaml
+++ b/ProjAssignment/ProjAssignment/Animal.xaml
@@ -21,9 +21,9 @@
             <DataGrid x:Name="animalTable" Height="182" Width="333" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Top="70" Canvas.Left="46" RenderTransformOrigin="0.5,0.5" IsEnabled="True" SelectionChanged="animalTable_SelectionChanged" RowEditEnding="UpdateAnimal">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding animalName, UpdateSourceTrigger=PropertyChanged}" />
-                    <DataGridTextColumn Header="Enclosure" Binding="{Binding enclosureName, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Enclosure" IsReadOnly="True" Binding="{Binding enclosureName, UpdateSourceTrigger=PropertyChanged}" />
                     <DataGridTextColumn Header="Type" Binding="{Binding animalType, UpdateSourceTrigger=PropertyChanged}" />
-                    <DataGridTextColumn Header="Food" Binding="{Binding foodType, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Food" IsReadOnly="True" Binding="{Binding foodType, UpdateSourceTrigger=PropertyChanged}" />
                     <DataGridTextColumn Header="Food Amount" Binding="{Binding FoodAmount, UpdateSourceTrigger=PropertyChanged}" />
 
 
@@ -43,7 +43,7 @@
             <Button  x:Name="deleteButton"  Content="Delete" Canvas.Left="339" Canvas.Top="271" Click="OnDeleteButtonClick"/>
             <ComboBox x:Name="animalNameCombobox" DisplayMemberPath="animalName" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="68" Canvas.Top="357" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <ComboBox x:Name="changeCombobox" Canvas.Left="226" DisplayMemberPath="Type" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="357" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <Label Content="Label" Canvas.Left="79" Canvas.Top="320"/>
+            <Label Content="Animal" Canvas.Left="68" Canvas.Top="324" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <RadioButton x:Name="foodRadioButton" Content="Food" Canvas.Left="240" Canvas.Top="333" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="OnFoodRadioButton"/>
             <RadioButton x:Name="enclosureradioButton" Content="Enclosure" Canvas.Left="291" Canvas.Top="334" HorizontalAlignment="Left" VerticalAlignment="Top" Checked="OnEnclosureRadioButton"/>
             <Button Content="UpdateButton" Canvas.Left="339" Canvas.Top="403" Click="OnUpdateButtonClick"/>
