--- a/ProjAssignment/ProjAssignment/Homepage.xaml
+++ b/ProjAssignment/ProjAssignment/Homepage.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjAssignment"
         mc:Ignorable="d"
-        Title="Homepage" Height="600" Width="800">
+        Title="Homepage" Height="600" Width="800"
+        
+        WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
@@ -20,11 +22,11 @@
                     <TranslateTransform Y="-0.663"/>
                 </TransformGroup>
             </Menu.RenderTransform>
-            <MenuItem Header="Caretakers"/>
-            <MenuItem Header="Animals" />
-            <MenuItem Header="Enclosure"/>
+            <MenuItem Header="Caretakers" Click="OnCaretakerClick"/>
+            <MenuItem Header="Animals" Click="OnAnimalsClick" />
+            <MenuItem Header="Enclosure" Click="OnEnclosureClick"/>
         </Menu>
-        <Frame x:Name="contentFrame" Source="../Animal.xaml" Margin="20,10,10,10" Grid.Column="1" />
+        <Frame x:Name="contentFrame" Source="../Animal.xaml" Margin="20,10,10,10" Grid.Column="1" NavigationUIVisibility="Hidden"/>
 
 
 
