--- a/ProjAssignment/ProjAssignment/Caretaker.xaml
+++ b/ProjAssignment/ProjAssignment/Caretaker.xaml
@@ -9,8 +9,15 @@
       Title="Caretaker">
 
     <Grid>
-        <Canvas Background="White">
-            <DataGrid x:Name="caretakerTable" Height="169" Width="185" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="106" Canvas.Top="80" RowEditEnding="OnRowEditEnd" CanUserReorderColumns="True" >
+        <Canvas IsEnabled="True">
+            <Canvas.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF629887" Offset="0"/>
+                    <GradientStop Color="#FF10DEA0" Offset="0.743"/>
+                    <GradientStop Color="#FF8BB5A8" Offset="0.067"/>
+                </LinearGradientBrush>
+            </Canvas.Background>
+            <DataGrid x:Name="caretakerTable" Height="145" Width="269" AutoGenerateColumns="False" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="68" Canvas.Top="80" RowEditEnding="OnRowEditEnd" CanUserReorderColumns="True" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Caretaker" Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                     <DataGridTextColumn Header="Phonenumber" Binding="{Binding PhoneNumber, UpdateSourceTrigger=PropertyChanged}"/>
@@ -21,8 +28,8 @@
             <TextBox x:Name="phoneNbrTextBox" Canvas.Left="475" TextWrapping="Wrap" Canvas.Top="147" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <Label Content="Name" Canvas.Left="475" Canvas.Top="80" RenderTransformOrigin="-0.56,1.407"/>
             <Label Content="Phone Number" Canvas.Left="475" Canvas.Top="125" RenderTransformOrigin="-0.56,1.407" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <Button x:Name="addButton" Content="Add" Canvas.Left="481" Canvas.Top="210" Click="OnAddButton"/>
-            <Button x:Name="deleteBtn" Content="Delete" Canvas.Left="215" Canvas.Top="265" Click="OnDeleteBtn"/>
+            <Button x:Name="addButton" Content="Add" Canvas.Left="569" Canvas.Top="180" Click="OnAddButton" RenderTransformOrigin="3.865,-0.902"/>
+            <Button x:Name="deleteBtn" Content="Delete" Canvas.Left="299" Canvas.Top="248" Click="OnDeleteBtn"/>
         </Canvas>
 
     </Grid>
