--- a/ProjAssignment/ProjAssignment/Enclosure.xaml
+++ b/ProjAssignment/ProjAssignment/Enclosure.xaml
@@ -8,6 +8,17 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Enclosure">
+    <Page.Resources >
+        <ControlTemplate x:Key="validationErrorTemplate">
+            <DockPanel>
+                <TextBlock Foreground="Red" 
+            DockPanel.Dock="Top">!</TextBlock>
+                <AdornedElementPlaceholder 
+           x:Name="ErrorAdorner"></AdornedElementPlaceholder>
+            </DockPanel>
+        </ControlTemplate>
+
+    </Page.Resources>
 
     <Grid>
         <Canvas IsEnabled="True">
@@ -28,19 +39,28 @@
                 </DataGrid.Columns>
             </DataGrid>
             <Button x:Name="addButton" Content="Add" Canvas.Left="584" Canvas.Top="237" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.118,0.86" Click="OnAddButton"/>
-            <Button x:Name="deleteButton" Content="Delete" Canvas.Left="46" Canvas.Top="267" Click="OnDeleteButton"/>
+            <Button x:Name="deleteButton" Content="Delete" Canvas.Left="331" Canvas.Top="262" Click="OnDeleteButton"/>
 
             <xctk:IntegerUpDown Name="myUpDownControl" Canvas.Top="72" Canvas.Left="490" IsEnabled="True"/>
             <xctk:IntegerUpDown Name="sizeUpDownControl" Canvas.Top="210" Increment="10" Canvas.Left="490" IsEnabled="True"/>
 
 
-            <TextBox x:Name="nameTextBox" Canvas.Left="490" TextWrapping="Wrap" Canvas.Top="116" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <TextBox x:Name="nameTextBox" Canvas.Left="490" TextWrapping="Wrap" Canvas.Top="116" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"
+                     Validation.ErrorTemplate="{StaticResource validationErrorTemplate}">
+                <TextBox.Text>
+                    <Binding Path="Name" Mode="TwoWay" UpdateSourceTrigger="LostFocus">
+                        <Binding.ValidationRules>
+                            <local:NameValidator></local:NameValidator>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBox x:Name="locationTextBox" Canvas.Left="490" TextWrapping="Wrap" Canvas.Top="161" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" />
             <Label x:Name="Capacity" Content="Capacity&#xD;&#xA;" Canvas.Left="490" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26"/>
             <Label Content="Name" Canvas.Left="490" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top" IsEnabled="True"/>
             <Label Content="Location" Canvas.Left="490" Canvas.Top="134" />
             <Label Content="Size" Canvas.Left="490" Canvas.Top="181" />
-            <RichTextBox x:Name="EnclosureRichTextBox" Height="63" Width="267" Canvas.Top="277" Canvas.Left="380" IsReadOnly="True" HorizontalAlignment="Left" VerticalAlignment="Center"  >
+            <RichTextBox x:Name="EnclosureRichTextBox" Height="63" Width="161" Canvas.Top="272" Canvas.Left="449" IsReadOnly="True" HorizontalAlignment="Left" VerticalAlignment="Center"  >
                 <FlowDocument>
                     <Paragraph>
                         <Run Text=""/>
