int and string validations

--- a/ProjAssignment/ProjAssignment/Animal.xaml
+++ b/ProjAssignment/ProjAssignment/Animal.xaml
@@ -8,6 +8,45 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Animal">
+    <Page.Resources >
+        <local:NameValidator x:Key="Ods"/>
+        <local:IntValidator x:Key="iVal"/>
+        <ControlTemplate x:Key="ValidationTemplate">
+            <DockPanel>
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+                    <Grid Width="12" Height="12">
+                        <Ellipse Width="12" Height="12" 
+            Fill="Red" HorizontalAlignment="Center" 
+            VerticalAlignment="Center"
+                     
+                     ></Ellipse>
+                        <TextBlock Foreground="White" FontWeight="Heavy" 
+            FontSize="8" HorizontalAlignment="Center" 
+            VerticalAlignment="Center" TextAlignment="Center"
+                       ToolTip="{Binding ElementName=ErrorAdorner, 
+                       Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                       >X</TextBlock>
+                    </Grid>
+                    <TextBlock Foreground="Red" FontWeight="12" Margin="2,0,0,0" 
+                   Text="{Binding ElementName=ErrorAdorner, 
+                   Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                   ></TextBlock>
+                </StackPanel>
+                <AdornedElementPlaceholder 
+        x:Name="ErrorAdorner" ></AdornedElementPlaceholder>
+            </DockPanel>
+        </ControlTemplate>
+
+        <Style x:Key="TextBoxInError" TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip"
+              Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                              Path=(Validation.Errors)}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
 
     <Grid>
         <Canvas IsEnabled="True">
@@ -22,7 +61,7 @@
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Name" Binding="{Binding animalName, UpdateSourceTrigger=PropertyChanged}" />
                     <DataGridTextColumn Header="Enclosure" IsReadOnly="True" Binding="{Binding enclosureName, UpdateSourceTrigger=PropertyChanged}" />
-                    <DataGridTextColumn Header="Type" Binding="{Binding animalType, UpdateSourceTrigger=PropertyChanged}" />
+                    <DataGridTextColumn Header="Species" Binding="{Binding animalType, UpdateSourceTrigger=PropertyChanged}" />
                     <DataGridTextColumn Header="Food" IsReadOnly="True" Binding="{Binding foodType, UpdateSourceTrigger=PropertyChanged}" />
                     <DataGridTextColumn Header="Food Amount" Binding="{Binding FoodAmount, UpdateSourceTrigger=PropertyChanged}" />
 
@@ -31,15 +70,43 @@
             </DataGrid>
             <ComboBox x:Name="enclosureComboBox" DisplayMemberPath="Name" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="497" Canvas.Top="159" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" RenderTransformOrigin="0.106,0.606" />
             <ComboBox x:Name="foodComboBox" DisplayMemberPath="Type" SelectedValuePath="Id" Canvas.Left="497" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="112" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" />
-            <xctk:IntegerUpDown x:Name="foodIntegerUpDown" Increment="100" Value="100" DefaultValue="100" Canvas.Left="507" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center" Width="81"/>
+            <xctk:IntegerUpDown x:Name="foodIntegerUpDown" Increment="100" Value="100" DefaultValue="100" Canvas.Left="507" Canvas.Top="266" HorizontalAlignment="Left" VerticalAlignment="Center" Width="81" Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <xctk:IntegerUpDown.Text>
+
+                    <Binding Source="{StaticResource iVal}" Path="Amount" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" >
+                        <Binding.ValidationRules>
+                            <local:IntValidator Max="10000" Min="50"/>
+
+                        </Binding.ValidationRules>
+
+                    </Binding>
+                </xctk:IntegerUpDown.Text>
+
+            </xctk:IntegerUpDown>
             <Label x:Name="Name" Content="Name&#xD;&#xA;&#xA;" Canvas.Left="490" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="26"/>
             <Label Content="Food&#xD;&#xA;" Canvas.Left="490" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top" IsEnabled="True" RenderTransformOrigin="0.081,-0.363"/>
             <Label Content="Enclosure&#xD;&#xA;" Canvas.Left="490" Canvas.Top="134" />
-            <Label Content="Type&#xD;&#xA;" Canvas.Left="490" Canvas.Top="181" />
-            <TextBox x:Name="animalNameTextBox" Canvas.Left="497" TextWrapping="Wrap" Canvas.Top="72" Width="120" TextChanged="TextBox_TextChanged_1" />
-            <TextBox x:Name="animalTypeTextBox" Canvas.Left="497" TextWrapping="Wrap" Canvas.Top="202" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Label Content="Species&#xA;" Canvas.Left="490" Canvas.Top="181" />
+            <TextBox x:Name="animalNameTextBox" Canvas.Left="497" TextWrapping="NoWrap" Canvas.Top="72" Width="120" Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <TextBox.Text>
+                    <Binding Source="{StaticResource Ods}" Path="Name" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                        <Binding.ValidationRules>
+                            <local:NameValidator></local:NameValidator>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <TextBox x:Name="animalTypeTextBox" Canvas.Left="497" TextWrapping="NoWrap" Canvas.Top="202" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"  Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <TextBox.Text>
+                    <Binding Source="{StaticResource Ods}" Path="Species" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                        <Binding.ValidationRules>
+                            <local:NameValidator></local:NameValidator>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <Label Content="Amount of food (g)&#xA;" Canvas.Left="497" Canvas.Top="228" HorizontalAlignment="Center" VerticalAlignment="Top" Height="33"/>
-            <Button x:Name="addButton" Content="Add" Canvas.Left="507" Canvas.Top="310" Click="OnAddButtonClick"/>
+            <Button x:Name="addButton" Content="Add" Canvas.Left="584" Canvas.Top="307" Click="OnAddButtonClick"/>
             <Button  x:Name="deleteButton"  Content="Delete" Canvas.Left="339" Canvas.Top="271" Click="OnDeleteButtonClick"/>
             <ComboBox x:Name="animalNameCombobox" DisplayMemberPath="animalName" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Left="68" Canvas.Top="357" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
             <ComboBox x:Name="changeCombobox" Canvas.Left="226" DisplayMemberPath="Type" SelectedValuePath="Id" SelectedValue="{Binding Id, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="357" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -47,6 +114,8 @@
             <RadioButton x:Name="foodRadioButton" Content="Food" Canvas.Left="240" Canvas.Top="333" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="OnFoodRadioButton"/>
             <RadioButton x:Name="enclosureradioButton" Content="Enclosure" Canvas.Left="291" Canvas.Top="334" HorizontalAlignment="Left" VerticalAlignment="Top" Checked="OnEnclosureRadioButton"/>
             <Button Content="UpdateButton" Canvas.Left="339" Canvas.Top="403" Click="OnUpdateButtonClick"/>
+            <Label  x:Name="errorMsg" Content=""  FontWeight="12" Canvas.Left="421" Canvas.Top="299" RenderTransformOrigin="0.684,-0.19" Foreground="Red" HorizontalAlignment="Center" VerticalAlignment="Center" Width="158" Height="38"/>
+
         </Canvas>
 
 
