--- a/ProjAssignment/ProjAssignment/Caretaker.xaml
+++ b/ProjAssignment/ProjAssignment/Caretaker.xaml
@@ -7,6 +7,44 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Caretaker">
+    <Page.Resources >
+        <local:NameValidator x:Key="Ods"/>
+        <ControlTemplate x:Key="ValidationTemplate">
+            <DockPanel>
+                <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+                    <Grid Width="12" Height="12">
+                        <Ellipse Width="12" Height="12" 
+            Fill="Red" HorizontalAlignment="Center" 
+            VerticalAlignment="Center"
+                     
+                     ></Ellipse>
+                        <TextBlock Foreground="White" FontWeight="Heavy" 
+            FontSize="8" HorizontalAlignment="Center" 
+            VerticalAlignment="Center" TextAlignment="Center"
+                       ToolTip="{Binding ElementName=ErrorAdorner, 
+                       Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                       >X</TextBlock>
+                    </Grid>
+                    <TextBlock Foreground="Red" FontWeight="12" Margin="2,0,0,0" 
+                   Text="{Binding ElementName=ErrorAdorner, 
+                   Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                   ></TextBlock>
+                </StackPanel>
+                <AdornedElementPlaceholder 
+        x:Name="ErrorAdorner" ></AdornedElementPlaceholder>
+            </DockPanel>
+        </ControlTemplate>
+
+        <Style x:Key="TextBoxInError" TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip"
+              Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                              Path=(Validation.Errors)}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
 
     <Grid>
         <Canvas IsEnabled="True">
@@ -24,12 +62,31 @@
                 </DataGrid.Columns>
 
             </DataGrid>
-            <TextBox x:Name="nameTextBox" Canvas.Left="475" TextWrapping="Wrap" Canvas.Top="107" Width="120"/>
-            <TextBox x:Name="phoneNbrTextBox" Canvas.Left="475" TextWrapping="Wrap" Canvas.Top="147" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <TextBox x:Name="nameTextBox" Canvas.Left="475" TextWrapping="NoWrap" Canvas.Top="107" Width="120" Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <TextBox.Text>
+                    <Binding Source="{StaticResource Ods}" Path="Name" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                        <Binding.ValidationRules>
+                            <local:NameValidator></local:NameValidator>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox >
+            <TextBox x:Name="phoneNbrTextBox" Canvas.Left="475" TextWrapping="NoWrap" Canvas.Top="147" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <TextBox.Text>
+                    <Binding Source="{StaticResource Ods}" Path="PhoneNbr" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
+                        <Binding.ValidationRules>
+                            <local:NameValidator></local:NameValidator>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+
             <Label Content="Name" Canvas.Left="475" Canvas.Top="80" RenderTransformOrigin="-0.56,1.407"/>
             <Label Content="Phone Number" Canvas.Left="475" Canvas.Top="125" RenderTransformOrigin="-0.56,1.407" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <Button x:Name="addButton" Content="Add" Canvas.Left="569" Canvas.Top="180" Click="OnAddButton" RenderTransformOrigin="3.865,-0.902"/>
             <Button x:Name="deleteBtn" Content="Delete" Canvas.Left="299" Canvas.Top="248" Click="OnDeleteBtn"/>
+            <Label  x:Name="errorMsg" Content=""  FontWeight="12" Canvas.Left="477" Canvas.Top="212" RenderTransformOrigin="0.684,-0.19" Foreground="Red"/>
         </Canvas>
 
     </Grid>
